[project]
name = "planetary_image_processor"
version = "0.0.1"
authors = [
  { name="Gero bergk", email="grbergk@gmail.com" },
]
description = "A simple planetary image processor"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Gero-B/Planetary-Image-Processor"